<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfile">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="280dp"
        android:layout_height="230dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dp" />

    <TextView
        android:id="@+id/profile_name_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="Harris Kobia"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="#C4C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_text_view" />

    <TextView
        android:id="@+id/track_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:text="@string/track"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/country_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/country"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/track_text_view"
        app:layout_constraintStart_toStartOf="@+id/track_text_view"
        app:layout_constraintTop_toBottomOf="@+id/track_text_view" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/email_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/country_text_view"
        app:layout_constraintStart_toStartOf="@+id/country_text_view"
        app:layout_constraintTop_toBottomOf="@+id/country_text_view" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/phonenumber_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/phoneNumber"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/email_text_view"
        app:layout_constraintStart_toStartOf="@+id/email_text_view"
        app:layout_constraintTop_toBottomOf="@+id/email_text_view" />

    <TextView
        android:textStyle="bold"
        android:id="@+id/username_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/username"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/phonenumber_text_view"
        app:layout_constraintStart_toStartOf="@+id/phonenumber_text_view"
        app:layout_constraintTop_toBottomOf="@+id/phonenumber_text_view" />

</android.support.constraint.ConstraintLayout>